--- a/SmartCalc.csproj
+++ b/SmartCalc.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{90C6BF75-FED4-4BBA-AAC4-F46AA0C4637C}</ProjectGuid>
+    <ProjectGuid>{4A050F52-6EB9-4671-BFA1-DD3BFE1CBB03}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>CalculadoraInteligente</RootNamespace>
-    <AssemblyName>CalculadoraInteligente</AssemblyName>
+    <RootNamespace>SmartCalc</RootNamespace>
+    <AssemblyName>SmartCalc</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
